force-app/main/default/objects/Sentry_Integration_Config__mdt/Sentry_Integration_Config__mdt.object-meta.xml
<CustomObject>
    <description>Pluggable outbound integration registry (Slack, webhook, SIEM).</description>
    <label>Sentry Integration Config</label>
    <pluralLabel>Sentry Integration Configs</pluralLabel>
</CustomObject>