force-app/main/default/objects/Sentry_Integration_Config__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>