force-app/main/default/objects/Sentry_Integration_Config__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enabled</label>
    <required>true</required>
    <type>Checkbox</type>
</CustomField>