force-app/main/default/objects/Sentry_Integration_Config__mdt/fields/External_Credential__c.field-meta.xml
<CustomField>
    <fullName>External_Credential__c</fullName>
    <label>External Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>