force-app/main/default/objects/Sentry_Integration_Config__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named Credential</label>
    <length>80</length>
    <type>Text</type>
</CustomField>