force-app/main/default/objects/Sentry_Integration_Config__mdt/fields/Path_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Path_Suffix__c</fullName>
    <label>Path Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>